added argline for surefire